CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(Test) #项目名称
#把当前目录(.)下所有源代码文件和头文件加入变量SRC_LIST
AUX_SOURCE_DIRECTORY(. SRC_LIST)
# Debug
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g")
#生成应用程序 hello (在windows下会自动生成hello.exe)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_EXECUTABLE(hello ${SRC_LIST})